--- a/Supercardonizer/package.json
+++ b/Supercardonizer/package.json
@@ -9,8 +9,7 @@
     "build": "npm --prefix src run build",
     "start": "npm --prefix src start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "typecheck": "tsc --noEmit"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -49,7 +48,6 @@
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
-    "patch-package": "^8.0.0",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.1",
