--- a/Supercardonizer/package.json
+++ b/Supercardonizer/package.json
@@ -6,13 +6,10 @@
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "npm --prefix src run build",
-    "start": "npm --prefix src start",
+    "build": "NODE_ENV=production next build",
+    "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
@@ -48,6 +45,7 @@
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
+    "patch-package": "^8.0.0",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.1",
