--- a/Supercardonizer/vercel.json
+++ b/Supercardonizer/vercel.json
@@ -1,4 +1,10 @@
 {
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
   "functions": {
     "src/app/page.tsx": {
       "maxDuration": 45
