--- a/Supercardonizer/src/package.json
+++ b/Supercardonizer/src/package.json
@@ -2,8 +2,5 @@
   "name": "supercardonizer-src-workaround",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "preinstall": "cd .. && npm install",
-    "build": "cd .. && npm run build"
-  }
+  "scripts": {}
 }
